[gd_scene load_steps=4 format=3 uid="uid://dugx70iqqbce0"]

[ext_resource type="Script" path="res://Scripts/modificar_baralho.gd" id="1_hfxd5"]
[ext_resource type="Script" path="res://Scripts/mod_bara.gd" id="2_751bu"]
[ext_resource type="Texture2D" uid="uid://unfi71qmaiey" path="res://icon.svg" id="3_kq4mu"]

[node name="ModificarBaralho" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hfxd5")

[node name="ModBara" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_751bu")

[node name="EditBaralho" type="VBoxContainer" parent="ModBara"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0920139
anchor_top = 0.146605
anchor_right = 0.353299
anchor_bottom = 0.248457
offset_bottom = 18.0
metadata/_edit_group_ = true

[node name="NewNome" type="LineEdit" parent="ModBara/EditBaralho"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Novo nome do Baralho"

[node name="NewDesc" type="LineEdit" parent="ModBara/EditBaralho"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Nova descrição do Baralho"

[node name="EditCarta" type="VBoxContainer" parent="ModBara"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.719618
anchor_top = 0.143519
anchor_right = 0.948785
anchor_bottom = 0.205247
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="ModCarta" type="Button" parent="ModBara/EditCarta"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Modificar Carta
"

[node name="imagem" type="TextureButton" parent="ModBara"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111979
anchor_top = 0.364198
anchor_right = 0.342882
anchor_bottom = 0.740741
texture_normal = ExtResource("3_kq4mu")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Voltar" type="Button" parent="ModBara"]
layout_mode = 0
offset_left = 45.0
offset_top = 549.0
offset_right = 204.0
offset_bottom = 612.0
text = "Voltar sem salvar"

[node name="Salvar" type="Button" parent="ModBara"]
layout_mode = 0
offset_left = 963.0
offset_top = 567.0
offset_right = 1109.0
offset_bottom = 620.0
text = "Salvar e sair"

[node name="SelectCarta" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SearchName" type="LineEdit" parent="SelectCarta"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.078125
anchor_top = 0.0864198
anchor_right = 0.87934
anchor_bottom = 0.154321
placeholder_text = "Escreva o nome de da Carta"
metadata/_edit_use_anchors_ = true

[node name="ScrollCartas" type="ScrollContainer" parent="SelectCarta"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0295139
anchor_top = 0.194444
anchor_right = 0.96441
anchor_bottom = 0.924383
metadata/_edit_use_anchors_ = true

[node name="Cartas" type="GridContainer" parent="SelectCarta/ScrollCartas"]
layout_mode = 2
columns = 6

[node name="ModCarta" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DescDICA" type="LineEdit" parent="ModCarta"]
layout_mode = 0
offset_left = 57.0
offset_top = 99.0
offset_right = 356.0
offset_bottom = 145.0
placeholder_text = "DescriçãoDICA"

[node name="Label" type="Label" parent="ModCarta/DescDICA"]
layout_mode = 0
offset_left = 13.0
offset_top = 58.0
offset_right = 275.0
offset_bottom = 424.0
text = "semDica"
autowrap_mode = 1
clip_text = true

[node name="LineEdit2" type="LineEdit" parent="ModCarta"]
layout_mode = 0
offset_left = 410.0
offset_top = 32.0
offset_right = 872.0
offset_bottom = 84.0
placeholder_text = "Ano"
alignment = 1

[node name="TextureButton" type="TextureButton" parent="ModCarta"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
anchor_left = 0.448785
anchor_top = 0.362654
anchor_right = 0.652778
anchor_bottom = 0.671296
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ModCarta"]
layout_mode = 0
offset_left = 424.0
offset_top = 165.0
offset_right = 875.0
offset_bottom = 231.0
metadata/_edit_group_ = true

[node name="CartaNome" type="LineEdit" parent="ModCarta/VBoxContainer"]
layout_mode = 2

[node name="CartaDesc" type="LineEdit" parent="ModCarta/VBoxContainer"]
layout_mode = 2

[node name="Voltar" type="Button" parent="ModCarta"]
layout_mode = 0
offset_left = 45.0
offset_top = 549.0
offset_right = 204.0
offset_bottom = 612.0
text = "Voltar sem salvar"

[node name="Salvar" type="Button" parent="ModCarta"]
layout_mode = 0
offset_left = 963.0
offset_top = 567.0
offset_right = 1109.0
offset_bottom = 620.0
text = "Salvar e sair"

[node name="CurrentDir" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.035
offset_left = 114.0
offset_top = 23.0
offset_right = 524.68
offset_bottom = 36.32
text = "CurrentDir: "

[node name="ICONE" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.179688
anchor_top = 0.296296
anchor_right = 0.259549
anchor_bottom = 0.361111
theme_override_font_sizes/font_size = 30
text = "ICONE"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ModBara/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="ModBara/Salvar" to="." method="_on_salvar_pressed"]
